--- a/examples/python_qna.ipynb
+++ b/examples/python_qna.ipynb
@@ -39,7 +39,7 @@
     "\n",
     "from wiki_helper.qna.impl.generative_model import StreamingLanguageModel\n",
     "from wiki_helper.qna.impl.knowledge_base import ExternalKnowledgeBase\n",
-    "from wiki_helper.qna.impl.system import StreamingRagSystemImpl\n",
+    "from wiki_helper.qna.impl.system import StreamingRagSystem\n",
     "from wiki_helper.storing.impl.storage import VectorStorage, VectorStorageConnection"
    ]
   },
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "system = StreamingRagSystemImpl(\n",
+    "system = StreamingRagSystem(\n",
     "    StreamingLanguageModel(model_location=generative_model_location),\n",
     "    ExternalKnowledgeBase(\"en\"),\n",
     "    VectorStorage(embedding_builder=contextual_oven, connection_settings=settings),\n",
