--- a/research/compare_models.ipynb
+++ b/research/compare_models.ipynb
@@ -28,7 +28,7 @@
     "1. The system will answer questions based on the provided Wikipedia article.\n",
     "2. I will then compute the **BERTScore** between the predicted answer and the ground truth answer.\n",
     "\n",
-    "Given that the answers in SQuAD are quite specific, using BERTScore will allow me to assess whether my system captures the correct semantics, even if there is some variation in the exact wording.\n",
+    "Given that the answers in SQuAD are quite specific, using BERTScore allows me to determine whether my system captures the correct semantics, even if there is some variation in the exact wording.\n",
     "\n",
     "### Models for Evaluation\n",
     "\n",
@@ -88,8 +88,8 @@
     "\n",
     "#### Sampling Method\n",
     "\n",
-    "1. **Randomly Select 10 Unique Article Titles**  \n",
-    "   From the dataset, 10 distinct article titles are randomly selected to ensure diversity in the sampled data.\n",
+    "1. **Randomly Select 30 Unique Article Titles**  \n",
+    "   From the dataset, 30 distinct article titles are randomly selected to ensure diversity in the sampled data.\n",
     "\n",
     "2. **Sample 10 Entries Per Title**  \n",
     "   For each selected title, 10 random question-answer pairs are sampled. If fewer than 10 entries exist for a title, all available entries are taken.\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "29640"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "4  {'text': ['2011', '2011', '2011'], 'answer_sta...  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1336,15 +1336,15 @@
      "output_type": "stream",
      "text": [
       "Statistics for 'bertscore':\n",
-      "Mean: 0.8293970932563146\n",
-      "Standard Deviation: 0.03723752709230562\n",
-      "Minimum: 0.7265495657920837\n",
+      "Mean: 0.8730350490411123\n",
+      "Standard Deviation: 0.05920499166290201\n",
+      "Minimum: 0.7532501816749573\n",
       "Maximum: 1.000000238418579\n",
       "Percentiles:\n",
-      "  50th percentile: 0.8253500163555145\n",
-      "  75th percentile: 0.8478496223688126\n",
-      "  90th percentile: 0.8763234078884125\n",
-      "  99th percentile: 0.9413502812385555\n"
+      "  50th percentile: 0.8587035536766052\n",
+      "  75th percentile: 0.9048262983560562\n",
+      "  90th percentile: 0.9691819906234742\n",
+      "  99th percentile: 1.0000001192092896\n"
      ]
     }
    ],
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1414,15 +1414,15 @@
      "output_type": "stream",
      "text": [
       "Statistics for 'bertscore':\n",
-      "Mean: 0.8293970932563146\n",
-      "Standard Deviation: 0.03723752709230562\n",
+      "Mean: 0.8293970954418183\n",
+      "Standard Deviation: 0.03723752962201752\n",
       "Minimum: 0.7265495657920837\n",
       "Maximum: 1.000000238418579\n",
       "Percentiles:\n",
-      "  50th percentile: 0.8253500163555145\n",
+      "  50th percentile: 0.8253499865531921\n",
       "  75th percentile: 0.8478496223688126\n",
       "  90th percentile: 0.8763234078884125\n",
-      "  99th percentile: 0.9413502812385555\n"
+      "  99th percentile: 0.9413503986597057\n"
      ]
     }
    ],
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1456,15 +1456,15 @@
      "output_type": "stream",
      "text": [
       "Statistics for 'duration':\n",
-      "Mean: 10.449147210003382\n",
-      "Standard Deviation: 3.921189097409322\n",
-      "Minimum: 2.7195086249994347\n",
-      "Maximum: 33.464258866999444\n",
+      "Mean: 7.323732395006809\n",
+      "Standard Deviation: 2.8996957134971155\n",
+      "Minimum: 2.253785475000768\n",
+      "Maximum: 25.278067119998013\n",
       "Percentiles:\n",
-      "  50th percentile: 9.740066264999768\n",
-      "  75th percentile: 12.436653168749217\n",
-      "  90th percentile: 14.931566049498361\n",
-      "  99th percentile: 21.76241399363847\n"
+      "  50th percentile: 6.932646895498692\n",
+      "  75th percentile: 8.74327257099867\n",
+      "  90th percentile: 10.613359278299688\n",
+      "  99th percentile: 16.00494768941069\n"
      ]
     }
    ],
@@ -1542,6 +1542,101 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## CPU Test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gemma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gemma_answers_cpu = run_evaluating_answering(system=gemma_system, df=sampled_df[:100])\n",
+    "\n",
+    "gemma_answers_cpu.to_csv(\"data/gemma_answers_cpu.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statistics for 'duration':\n",
+      "Mean: 15.814754969560035\n",
+      "Standard Deviation: 6.235455549464638\n",
+      "Minimum: 5.17293239799983\n",
+      "Maximum: 34.75892068199937\n",
+      "Percentiles:\n",
+      "  50th percentile: 15.152443121500255\n",
+      "  75th percentile: 19.250242290499955\n",
+      "  90th percentile: 24.343873495800473\n",
+      "  99th percentile: 34.06478960997063\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_stats(gemma_answers_cpu, \"duration\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Llama"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llama_answers_cpu = run_evaluating_answering(system=llama_system, df=sampled_df[:100])\n",
+    "\n",
+    "llama_answers_cpu.to_csv(\"data/llama_answers_cpu.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Statistics for 'duration':\n",
+      "Mean: 16.801882583079998\n",
+      "Standard Deviation: 7.383330526963501\n",
+      "Minimum: 4.060531589999982\n",
+      "Maximum: 42.0320459080001\n",
+      "Percentiles:\n",
+      "  50th percentile: 15.656283752999911\n",
+      "  75th percentile: 21.06364739275\n",
+      "  90th percentile: 26.214863057200052\n",
+      "  99th percentile: 36.84665048851008\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_stats(llama_answers_cpu, \"duration\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Conclusion"
    ]
   },
@@ -1549,8 +1644,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Although the metrics are all at the same level, llama-3.2 slightly wins by quality, as well as by duration. Moreover, llama has multilingual prospects. This model is capable of understanding and generating text in eight languages (officially supported, but it can also know others to some extend). "
+    "## Thus, these results make Gemma absolute winner: it is of a good quality, relatively fast and small in size, even though it has the least parameters of all three"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
